Updated package files

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-      "homepage": "https://IseMike.github.io/",
+      "homepage": "https://IseMike.github.io/IMS-Portfolio-Website/",
       "name": "ims_portfolio",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
+            "@babel/plugin-transform-dynamic-import": "^7.25.9",
             "@fortawesome/fontawesome-svg-core": "^6.4.0",
             "@fortawesome/free-brands-svg-icons": "^6.4.0",
             "@fortawesome/react-fontawesome": "^0.2.0",
